// Copyright 2024-2025 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package graphpb;

option go_package = "github.com/cardinalhq/oteltools/pkg/graph/graphpb";

import "apps_daemonset.proto";
import "apps_deployment.proto";
import "apps_replicaset.proto";
import "apps_statefulset.proto";
import "configmap.proto";
import "pod.proto";
import "secret.proto";

// PackagedObject represents an object with arbitrary attributes.
message PackagedObject {
  map<string, string> resource_attributes = 1;
  map<string, string> record_attributes = 2;

  oneof object {
    PodSummary pod_summary = 3;
    SecretSummary secret_summary = 4;
    ConfigMapSummary config_map_summary = 5;
    AppsDeploymentSummary apps_deployment_summary = 6;
    AppsStatefulSetSummary apps_stateful_set_summary = 7;
    AppsDaemonSetSummary apps_daemon_set_summary = 8;
    AppsReplicaSetSummary apps_replica_set_summary = 9;
  }
}

message PackagedObjectList {
  repeated PackagedObject items = 1;
}
