// Copyright 2024-2025 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package graphpb;

option go_package = "github.com/cardinalhq/oteltools/pkg/graph/graphpb";

import "google/protobuf/timestamp.proto";

import "base.proto";
import "image.proto";

// PodSummary summarizes a Kubernetes Pod.
message PodSummary {
  BaseObject base_object = 1;
  repeated PodContainerSummary containers = 2;
  repeated string host_ips = 3;
  repeated string pod_ips = 4;
  string phase = 5;
  google.protobuf.Timestamp started_at = 6;
  string phase_message = 7;
  string service_account_name = 8;
}

// PodContainerSummary summarizes a container within a Pod.
message PodContainerSummary {
  string name = 1;
  ImageSummary image = 2;
  bool ready = 3;
  // The "resources" field corresponds to the container resource requests.
  map<string, string> resources = 4;
  repeated string config_map_names = 5;
  repeated string secret_names = 6;
  bool is_image_pull_back_off = 7;
  bool is_crash_loop_back_off = 8;
  bool was_oom_killed = 9;
}
